--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "beatles-alpha",
   "description": "cml内测版",
   "version": "0.3.7",
-  "publisher": "wangzhiliang",
+  "publisher": "wuhui",
   "icon": "images/logo.png",
   "keywords": [
     "cml",
